SAK-42762 Samigo: Latex question text alignment issue (#8113)
(cherry picked from commit 79acb44fa1bb8275696ca13300599edd920e3d85)

--- a/samigo/samigo-app/src/webapp/css/tool_sam.css
+++ b/samigo/samigo-app/src/webapp/css/tool_sam.css
@@ -1416,6 +1416,10 @@ input[type='reset'].linearButton {
 	padding: 6px 12px;
 }
 
+.MathJax_Display {
+  text-align: left !important;
+}
+
 .input-group-btn button.multiselect-clear-filter{
 	padding: 6px 12px;
 	font-size: 14px;
